2025-12-10 Gabriele Gorla <gorlik@yahoo.com>

	* device/lib/mos6502/__stdc_bit_width.s,
	  device/lib/mos6502/__stdc_count_ones.s:
	  Add assembly implementations of stdc_bit_width and stdc_count_ones.
	
2025-12-09 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/genplus.c,
	  src/mos6502/genminus.c:
	  Fix bug in c90-isort.
  	* src/mos6502/gen.c:
  	  Improve genPointerGet and genPointerSet.
  	* src/mos6502/main.c,
  	  src/mos6502/genlshift.c,
  	  device/lib/mos6502/Makefile.in,
  	  device/lib/mos6502/_srulonglong.c,
  	  device/lib/mos6502/_srslonglong.c,
  	  device/lib/mos6502-stack-auto/Makefile.in,
  	  device/lib/mos6502-stack-auto/_srulonglong.c,
  	  device/lib/mos6502-stack-auto/_srslonglong.c,
  	  device/lib/mos65c02/Makefile.in,
  	  device/lib/mos65c02/_srulonglong.c,
  	  device/lib/mos65c02/_srslonglong.c:
  	  Enable longlong shifts without support routines.
  	  
2025-12-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge _Optional branch.

2025-12-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/SDCCicode.c,
	  src/SDCCsymt.c:
	  Steps towards a fix for bug #3898. Better diagnostics for _Optional.

2025-12-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCcse.c,
	  src/SDCCicode.c:
	  Steps towards a fix for bug #3898 and better diagnostics for _Optional.

2025-12-06 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCcse.c,
	  src/SDCCgenconstprop.cc,
	  src/SDCCicode.c,
	  src/SDCCopt.c,
	  support/valdiag/tests/_Optional.c:
	  Steps towards a fix for bug #3898 and better diagnostics for _Optional.

2025-12-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asz80/tz80.asm:
	  sdas Z80N test cases.

2025-12-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* configure,
	  configure.ac,
	  sdas/linksrc/clean.mk,
	  sdas/linksrc/lkelf.c:
	  Replace type macros by ISO C99 typedefs.

2025-12-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* configure,